--- a/src/html/script.html
+++ b/src/html/script.html
@@ -8,4 +8,5 @@
 <script src="static/date.js"></script>
 <script src="static/jquery.maskedinput.js"></script>
 <script src="static/just-validate.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
 <script src="js/app.min.js"></script>
